# splunk-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  splunk_mcp.py
CHANGES/: HTTP_MODE_SUPPORT.md  UPGRADE_TO_FASTMCP_2.md
tests/: test_endpoints_pytest.py  test_mcp.py
