[project]
name = "splunk-mcp"
version = "0.4.0"
description = "A FastMCP-based tool for interacting with Splunk Enterprise/Cloud through natural language"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.3",
    "splunk-sdk>=1.7.4",
    "python-decouple>=3.8",
    "requests>=2.31.0",
    "aiohttp>=3.13.3,<4.0.0",
    "uvicorn>=0.40.0",
    "fastapi>=0.128.0",
    "starlette>=0.40.0,<0.51.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "sse-starlette>=1.8.0",
    "mcp>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.1",
    "black>=26.1.0",
    "isort>=6.0.0",
    "mypy>=1.0.0",
]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = ">=2.14.3"
splunk-sdk = ">=1.7.4"
python-decouple = ">=3.8"
requests = ">=2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
black = "^26.1"
isort = "^6.0"
mypy = "^1.17"
pytest-asyncio = ">=1.3.0"
pytest-cov = ">=4.1.0"
pytest-mock = "^3.14.1"

[project.scripts]
splunk-mcp = "splunk_mcp:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
